parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    GEQUAL
    GTHAN
    LEQUAL
    WS

Grammar

Rule 0     S' -> prog
Rule 1     prog -> main classes
Rule 2     main -> CLASS ID LCURLY PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET ID RPAREN LCURLY cmd RCURLY RCURLY
Rule 3     main -> ID LCURLY PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET ID RPAREN LCURLY cmd RCURLY RCURLY
Rule 4     classes -> classe
Rule 5     classes -> classes classe
Rule 6     classe -> CLASS ID EXTENDS ID LCURLY vars metodos RCURLY
Rule 7     classe -> CLASS ID LCURLY vars metodos RCURLY
Rule 8     vars -> var
Rule 9     vars -> vars var
Rule 10    vars -> empty
Rule 11    var -> tipo ID SEMICOLON
Rule 12    var -> ID ID SEMICOLON
Rule 13    metodos -> metodo
Rule 14    metodos -> metodos metodo
Rule 15    metodo -> PUBLIC tipo ID LPAREN params RPAREN LCURLY vars cmds RETURN exp SEMICOLON RCURLY
Rule 16    metodo -> PUBLIC tipo ID LPAREN RPAREN LCURLY vars cmds RETURN exp SEMICOLON RCURLY
Rule 17    metodo -> PUBLIC ID ID LPAREN params RPAREN LCURLY vars cmds RETURN exp SEMICOLON RCURLY
Rule 18    metodo -> PUBLIC ID ID LPAREN RPAREN LCURLY vars cmds RETURN exp SEMICOLON RCURLY
Rule 19    metodo -> empty
Rule 20    params -> tipo ID
Rule 21    params -> params COMMA tipo ID
Rule 22    params -> ID ID
Rule 23    params -> params COMMA ID ID
Rule 24    tipo -> INT LBRACKET RBRACKET
Rule 25    tipo -> BOOLEAN
Rule 26    tipo -> INT
Rule 27    cmds -> cmd
Rule 28    cmds -> cmds cmd
Rule 29    cmd -> LCURLY cmds RCURLY
Rule 30    cmd -> IF LPAREN exp RPAREN cmd
Rule 31    cmd -> IF LPAREN exp RPAREN cmd ELSE cmd
Rule 32    cmd -> WHILE LPAREN exp RPAREN cmd
Rule 33    cmd -> PRINTLN LPAREN exp RPAREN SEMICOLON
Rule 34    cmd -> ID ASSIGN exp SEMICOLON
Rule 35    cmd -> ID LBRACKET exp RBRACKET ASSIGN exp SEMICOLON
Rule 36    cmd -> empty
Rule 37    exp -> exp AND rexp
Rule 38    exp -> rexp
Rule 39    exp -> empty
Rule 40    rexp -> rexp LTHAN aexp
Rule 41    rexp -> rexp EQUALS aexp
Rule 42    rexp -> rexp DIFFERENT aexp
Rule 43    rexp -> aexp
Rule 44    aexp -> aexp PLUS mexp
Rule 45    aexp -> aexp MINUS mexp
Rule 46    aexp -> mexp
Rule 47    mexp -> mexp TIMES sexp
Rule 48    mexp -> sexp
Rule 49    sexp -> NOT sexp
Rule 50    sexp -> MINUS sexp
Rule 51    sexp -> TRUE
Rule 52    sexp -> FALSE
Rule 53    sexp -> NUMBER
Rule 54    sexp -> NULL
Rule 55    sexp -> NEW INT LBRACKET exp RBRACKET
Rule 56    sexp -> pexp DOT LENGTH
Rule 57    sexp -> ID DOT LENGTH
Rule 58    sexp -> pexp LBRACKET exp RBRACKET
Rule 59    sexp -> ID LBRACKET exp RBRACKET
Rule 60    sexp -> ID
Rule 61    pexp -> THIS
Rule 62    pexp -> NEW ID LPAREN RPAREN
Rule 63    pexp -> LPAREN exp RPAREN
Rule 64    pexp -> pexp DOT ID
Rule 65    pexp -> ID DOT ID
Rule 66    pexp -> pexp DOT ID LPAREN exps RPAREN
Rule 67    pexp -> pexp DOT ID LPAREN RPAREN
Rule 68    pexp -> ID DOT ID LPAREN exps RPAREN
Rule 69    pexp -> ID DOT ID LPAREN RPAREN
Rule 70    exps -> exp
Rule 71    exps -> exps COMMA exp
Rule 72    empty -> <empty>

Terminals, with rules where they appear

AND                  : 37
ASSIGN               : 34 35
BOOLEAN              : 25
CLASS                : 2 6 7
COMMA                : 21 23 71
COMMENT              : 
DIFFERENT            : 42
DOT                  : 56 57 64 65 66 67 68 69
ELSE                 : 31
EQUALS               : 41
EXTENDS              : 6
FALSE                : 52
GEQUAL               : 
GTHAN                : 
ID                   : 2 2 3 3 6 6 7 11 12 12 15 16 17 17 18 18 20 21 22 22 23 23 34 35 57 59 60 62 64 65 65 66 67 68 68 69 69
IF                   : 30 31
INT                  : 24 26 55
LBRACKET             : 2 3 24 35 55 58 59
LCURLY               : 2 2 3 3 6 7 15 16 17 18 29
LENGTH               : 56 57
LEQUAL               : 
LPAREN               : 2 3 15 16 17 18 30 31 32 33 62 63 66 67 68 69
LTHAN                : 40
MAIN                 : 2 3
MINUS                : 45 50
NEW                  : 55 62
NOT                  : 49
NULL                 : 54
NUMBER               : 53
PLUS                 : 44
PRINTLN              : 33
PUBLIC               : 2 3 15 16 17 18
RBRACKET             : 2 3 24 35 55 58 59
RCURLY               : 2 2 3 3 6 7 15 16 17 18 29
RETURN               : 15 16 17 18
RPAREN               : 2 3 15 16 17 18 30 31 32 33 62 63 66 67 68 69
SEMICOLON            : 11 12 15 16 17 18 33 34 35
STATIC               : 2 3
STRING               : 2 3
THIS                 : 61
TIMES                : 47
TRUE                 : 51
VOID                 : 2 3
WHILE                : 32
WS                   : 
error                : 

Nonterminals, with rules where they appear

aexp                 : 40 41 42 43 44 45
classe               : 4 5
classes              : 1 5
cmd                  : 2 3 27 28 30 31 31 32
cmds                 : 15 16 17 18 28 29
empty                : 10 19 36 39
exp                  : 15 16 17 18 30 31 32 33 34 35 35 37 55 58 59 63 70 71
exps                 : 66 68 71
main                 : 1
metodo               : 13 14
metodos              : 6 7 14
mexp                 : 44 45 46 47
params               : 15 17 21 23
pexp                 : 56 58 64 66 67
prog                 : 0
rexp                 : 37 38 40 41 42
sexp                 : 47 48 49 50
tipo                 : 11 15 16 20 21
var                  : 8 9
vars                 : 6 7 9 15 16 17 18

Parsing method: SLR

state 0

    (0) S' -> . prog
    (1) prog -> . main classes
    (2) main -> . CLASS ID LCURLY PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET ID RPAREN LCURLY cmd RCURLY RCURLY
    (3) main -> . ID LCURLY PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET ID RPAREN LCURLY cmd RCURLY RCURLY

    CLASS           shift and go to state 3
    ID              shift and go to state 4

    prog                           shift and go to state 1
    main                           shift and go to state 2

state 1

    (0) S' -> prog .



state 2

    (1) prog -> main . classes
    (4) classes -> . classe
    (5) classes -> . classes classe
    (6) classe -> . CLASS ID EXTENDS ID LCURLY vars metodos RCURLY
    (7) classe -> . CLASS ID LCURLY vars metodos RCURLY

    CLASS           shift and go to state 7

    classes                        shift and go to state 5
    classe                         shift and go to state 6

state 3

    (2) main -> CLASS . ID LCURLY PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET ID RPAREN LCURLY cmd RCURLY RCURLY

    ID              shift and go to state 8


state 4

    (3) main -> ID . LCURLY PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET ID RPAREN LCURLY cmd RCURLY RCURLY

    LCURLY          shift and go to state 9


state 5

    (1) prog -> main classes .
    (5) classes -> classes . classe
    (6) classe -> . CLASS ID EXTENDS ID LCURLY vars metodos RCURLY
    (7) classe -> . CLASS ID LCURLY vars metodos RCURLY

    $end            reduce using rule 1 (prog -> main classes .)
    CLASS           shift and go to state 7

    classe                         shift and go to state 10

state 6

    (4) classes -> classe .

    $end            reduce using rule 4 (classes -> classe .)
    CLASS           reduce using rule 4 (classes -> classe .)


state 7

    (6) classe -> CLASS . ID EXTENDS ID LCURLY vars metodos RCURLY
    (7) classe -> CLASS . ID LCURLY vars metodos RCURLY

    ID              shift and go to state 11


state 8

    (2) main -> CLASS ID . LCURLY PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET ID RPAREN LCURLY cmd RCURLY RCURLY

    LCURLY          shift and go to state 12


state 9

    (3) main -> ID LCURLY . PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET ID RPAREN LCURLY cmd RCURLY RCURLY

    PUBLIC          shift and go to state 13


state 10

    (5) classes -> classes classe .

    $end            reduce using rule 5 (classes -> classes classe .)
    CLASS           reduce using rule 5 (classes -> classes classe .)


state 11

    (6) classe -> CLASS ID . EXTENDS ID LCURLY vars metodos RCURLY
    (7) classe -> CLASS ID . LCURLY vars metodos RCURLY

    EXTENDS         shift and go to state 14
    LCURLY          shift and go to state 15


state 12

    (2) main -> CLASS ID LCURLY . PUBLIC STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET ID RPAREN LCURLY cmd RCURLY RCURLY

    PUBLIC          shift and go to state 16


state 13

    (3) main -> ID LCURLY PUBLIC . STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET ID RPAREN LCURLY cmd RCURLY RCURLY

    STATIC          shift and go to state 17


state 14

    (6) classe -> CLASS ID EXTENDS . ID LCURLY vars metodos RCURLY

    ID              shift and go to state 18


state 15

    (7) classe -> CLASS ID LCURLY . vars metodos RCURLY
    (8) vars -> . var
    (9) vars -> . vars var
    (10) vars -> . empty
    (11) var -> . tipo ID SEMICOLON
    (12) var -> . ID ID SEMICOLON
    (72) empty -> .
    (24) tipo -> . INT LBRACKET RBRACKET
    (25) tipo -> . BOOLEAN
    (26) tipo -> . INT

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
    ID              shift and go to state 19
    PUBLIC          reduce using rule 72 (empty -> .)
    RCURLY          reduce using rule 72 (empty -> .)
    RETURN          reduce using rule 72 (empty -> .)
    LCURLY          reduce using rule 72 (empty -> .)
    IF              reduce using rule 72 (empty -> .)
    WHILE           reduce using rule 72 (empty -> .)
    PRINTLN         reduce using rule 72 (empty -> .)
    ELSE            reduce using rule 72 (empty -> .)
    SEMICOLON       reduce using rule 72 (empty -> .)
    RPAREN          reduce using rule 72 (empty -> .)
    RBRACKET        reduce using rule 72 (empty -> .)
    AND             reduce using rule 72 (empty -> .)
    COMMA           reduce using rule 72 (empty -> .)
    INT             shift and go to state 24
    BOOLEAN         shift and go to state 25

  ! ID              [ reduce using rule 72 (empty -> .) ]
  ! INT             [ reduce using rule 72 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 72 (empty -> .) ]

    vars                           shift and go to state 20
    var                            shift and go to state 21
    empty                          shift and go to state 22
    tipo                           shift and go to state 23

state 16

    (2) main -> CLASS ID LCURLY PUBLIC . STATIC VOID MAIN LPAREN STRING LBRACKET RBRACKET ID RPAREN LCURLY cmd RCURLY RCURLY

    STATIC          shift and go to state 26


state 17

    (3) main -> ID LCURLY PUBLIC STATIC . VOID MAIN LPAREN STRING LBRACKET RBRACKET ID RPAREN LCURLY cmd RCURLY RCURLY

    VOID            shift and go to state 27


state 18

    (6) classe -> CLASS ID EXTENDS ID . LCURLY vars metodos RCURLY

    LCURLY          shift and go to state 28


state 19

    (12) var -> ID . ID SEMICOLON

    ID              shift and go to state 29


state 20

    (7) classe -> CLASS ID LCURLY vars . metodos RCURLY
    (9) vars -> vars . var
    (13) metodos -> . metodo
    (14) metodos -> . metodos metodo
    (11) var -> . tipo ID SEMICOLON
    (12) var -> . ID ID SEMICOLON
    (15) metodo -> . PUBLIC tipo ID LPAREN params RPAREN LCURLY vars cmds RETURN exp SEMICOLON RCURLY
    (16) metodo -> . PUBLIC tipo ID LPAREN RPAREN LCURLY vars cmds RETURN exp SEMICOLON RCURLY
    (17) metodo -> . PUBLIC ID ID LPAREN params RPAREN LCURLY vars cmds RETURN exp SEMICOLON RCURLY
    (18) metodo -> . PUBLIC ID ID LPAREN RPAREN LCURLY vars cmds RETURN exp SEMICOLON RCURLY
    (19) metodo -> . empty
    (24) tipo -> . INT LBRACKET RBRACKET
    (25) tipo -> . BOOLEAN
    (26) tipo -> . INT
    (72) empty -> .

  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
    ID              shift and go to state 19
    PUBLIC          shift and go to state 33
    INT             shift and go to state 24
    BOOLEAN         shift and go to state 25
    RCURLY          reduce using rule 72 (empty -> .)
    RETURN          reduce using rule 72 (empty -> .)
    LCURLY          reduce using rule 72 (empty -> .)
    IF              reduce using rule 72 (empty -> .)
    WHILE           reduce using rule 72 (empty -> .)
    PRINTLN         reduce using rule 72 (empty -> .)
    ELSE            reduce using rule 72 (empty -> .)
    SEMICOLON       reduce using rule 72 (empty -> .)
    RPAREN          reduce using rule 72 (empty -> .)
    RBRACKET        reduce using rule 72 (empty -> .)
    AND             reduce using rule 72 (empty -> .)
    COMMA           reduce using rule 72 (empty -> .)

  ! PUBLIC          [ reduce using rule 72 (empty -> .) ]
  ! ID              [ reduce using rule 72 (empty -> .) ]
  ! INT             [ reduce using rule 72 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 72 (empty -> .) ]

    metodos                        shift and go to state 30
    var                            shift and go to state 31
    metodo                         shift and go to state 32
    tipo                           shift and go to state 23
    empty                          shift and go to state 34

state 21

    (8) vars -> var .

    PUBLIC          reduce using rule 8 (vars -> var .)
    RCURLY          reduce using rule 8 (vars -> var .)
    ID              reduce using rule 8 (vars -> var .)
    INT             reduce using rule 8 (vars -> var .)
    BOOLEAN         reduce using rule 8 (vars -> var .)
    LCURLY          reduce using rule 8 (vars -> var .)
    IF              reduce using rule 8 (vars -> var .)
    WHILE           reduce using rule 8 (vars -> var .)
    PRINTLN         reduce using rule 8 (vars -> var .)
    RETURN          reduce using rule 8 (vars -> var .)


state 22

    (10) vars -> empty .

    PUBLIC          reduce using rule 10 (vars -> empty .)
    RCURLY          reduce using rule 10 (vars -> empty .)
    ID              reduce using rule 10 (vars -> empty .)
    INT             reduce using rule 10 (vars -> empty .)
    BOOLEAN         reduce using rule 10 (vars -> empty .)
    LCURLY          reduce using rule 10 (vars -> empty .)
    IF              reduce using rule 10 (vars -> empty .)
    WHILE           reduce using rule 10 (vars -> empty .)
    PRINTLN         reduce using rule 10 (vars -> empty .)
    RETURN          reduce using rule 10 (vars -> empty .)


state 23

    (11) var -> tipo . ID SEMICOLON

    ID              shift and go to state 35


state 24

    (24) tipo -> INT . LBRACKET RBRACKET
    (26) tipo -> INT .

    LBRACKET        shift and go to state 36
    ID              reduce using rule 26 (tipo -> INT .)


state 25

    (25) tipo -> BOOLEAN .

    ID              reduce using rule 25 (tipo -> BOOLEAN .)


state 26

    (2) main -> CLASS ID LCURLY PUBLIC STATIC . VOID MAIN LPAREN STRING LBRACKET RBRACKET ID RPAREN LCURLY cmd RCURLY RCURLY

    VOID            shift and go to state 37


state 27

    (3) main -> ID LCURLY PUBLIC STATIC VOID . MAIN LPAREN STRING LBRACKET RBRACKET ID RPAREN LCURLY cmd RCURLY RCURLY

    MAIN            shift and go to state 38


state 28

    (6) classe -> CLASS ID EXTENDS ID LCURLY . vars metodos RCURLY
    (8) vars -> . var
    (9) vars -> . vars var
    (10) vars -> . empty
    (11) var -> . tipo ID SEMICOLON
    (12) var -> . ID ID SEMICOLON
    (72) empty -> .
    (24) tipo -> . INT LBRACKET RBRACKET
    (25) tipo -> . BOOLEAN
    (26) tipo -> . INT

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
    ID              shift and go to state 19
    PUBLIC          reduce using rule 72 (empty -> .)
    RCURLY          reduce using rule 72 (empty -> .)
    RETURN          reduce using rule 72 (empty -> .)
    LCURLY          reduce using rule 72 (empty -> .)
    IF              reduce using rule 72 (empty -> .)
    WHILE           reduce using rule 72 (empty -> .)
    PRINTLN         reduce using rule 72 (empty -> .)
    ELSE            reduce using rule 72 (empty -> .)
    SEMICOLON       reduce using rule 72 (empty -> .)
    RPAREN          reduce using rule 72 (empty -> .)
    RBRACKET        reduce using rule 72 (empty -> .)
    AND             reduce using rule 72 (empty -> .)
    COMMA           reduce using rule 72 (empty -> .)
    INT             shift and go to state 24
    BOOLEAN         shift and go to state 25

  ! ID              [ reduce using rule 72 (empty -> .) ]
  ! INT             [ reduce using rule 72 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 72 (empty -> .) ]

    vars                           shift and go to state 39
    var                            shift and go to state 21
    empty                          shift and go to state 22
    tipo                           shift and go to state 23

state 29

    (12) var -> ID ID . SEMICOLON

    SEMICOLON       shift and go to state 40


state 30

    (7) classe -> CLASS ID LCURLY vars metodos . RCURLY
    (14) metodos -> metodos . metodo
    (15) metodo -> . PUBLIC tipo ID LPAREN params RPAREN LCURLY vars cmds RETURN exp SEMICOLON RCURLY
    (16) metodo -> . PUBLIC tipo ID LPAREN RPAREN LCURLY vars cmds RETURN exp SEMICOLON RCURLY
    (17) metodo -> . PUBLIC ID ID LPAREN params RPAREN LCURLY vars cmds RETURN exp SEMICOLON RCURLY
    (18) metodo -> . PUBLIC ID ID LPAREN RPAREN LCURLY vars cmds RETURN exp SEMICOLON RCURLY
    (19) metodo -> . empty
    (72) empty -> .

  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for RCURLY resolved as shift
    RCURLY          shift and go to state 41
    PUBLIC          shift and go to state 33
    ID              reduce using rule 72 (empty -> .)
    INT             reduce using rule 72 (empty -> .)
    BOOLEAN         reduce using rule 72 (empty -> .)
    RETURN          reduce using rule 72 (empty -> .)
    LCURLY          reduce using rule 72 (empty -> .)
    IF              reduce using rule 72 (empty -> .)
    WHILE           reduce using rule 72 (empty -> .)
    PRINTLN         reduce using rule 72 (empty -> .)
    ELSE            reduce using rule 72 (empty -> .)
    SEMICOLON       reduce using rule 72 (empty -> .)
    RPAREN          reduce using rule 72 (empty -> .)
    RBRACKET        reduce using rule 72 (empty -> .)
    AND             reduce using rule 72 (empty -> .)
    COMMA           reduce using rule 72 (empty -> .)

  ! PUBLIC          [ reduce using rule 72 (empty -> .) ]
  ! RCURLY          [ reduce using rule 72 (empty -> .) ]

    metodo                         shift and go to state 42
    empty                          shift and go to state 34

state 31

    (9) vars -> vars var .

    PUBLIC          reduce using rule 9 (vars -> vars var .)
    RCURLY          reduce using rule 9 (vars -> vars var .)
    ID              reduce using rule 9 (vars -> vars var .)
    INT             reduce using rule 9 (vars -> vars var .)
    BOOLEAN         reduce using rule 9 (vars -> vars var .)
    LCURLY          reduce using rule 9 (vars -> vars var .)
    IF              reduce using rule 9 (vars -> vars var .)
    WHILE           reduce using rule 9 (vars -> vars var .)
    PRINTLN         reduce using rule 9 (vars -> vars var .)
    RETURN          reduce using rule 9 (vars -> vars var .)


state 32

    (13) metodos -> metodo .

    RCURLY          reduce using rule 13 (metodos -> metodo .)
    PUBLIC          reduce using rule 13 (metodos -> metodo .)


state 33

    (15) metodo -> PUBLIC . tipo ID LPAREN params RPAREN LCURLY vars cmds RETURN exp SEMICOLON RCURLY
    (16) metodo -> PUBLIC . tipo ID LPAREN RPAREN LCURLY vars cmds RETURN exp SEMICOLON RCURLY
    (17) metodo -> PUBLIC . ID ID LPAREN params RPAREN LCURLY vars cmds RETURN exp SEMICOLON RCURLY
    (18) metodo -> PUBLIC . ID ID LPAREN RPAREN LCURLY vars cmds RETURN exp SEMICOLON RCURLY
    (24) tipo -> . INT LBRACKET RBRACKET
    (25) tipo -> . BOOLEAN
    (26) tipo -> . INT

    ID              shift and go to state 44
    INT             shift and go to state 24
    BOOLEAN         shift and go to state 25

    tipo                           shift and go to state 43

state 34

    (19) metodo -> empty .

    RCURLY          reduce using rule 19 (metodo -> empty .)
    PUBLIC          reduce using rule 19 (metodo -> empty .)


state 35

    (11) var -> tipo ID . SEMICOLON

    SEMICOLON       shift and go to state 45


state 36

    (24) tipo -> INT LBRACKET . RBRACKET

    RBRACKET        shift and go to state 46


state 37

    (2) main -> CLASS ID LCURLY PUBLIC STATIC VOID . MAIN LPAREN STRING LBRACKET RBRACKET ID RPAREN LCURLY cmd RCURLY RCURLY

    MAIN            shift and go to state 47


state 38

    (3) main -> ID LCURLY PUBLIC STATIC VOID MAIN . LPAREN STRING LBRACKET RBRACKET ID RPAREN LCURLY cmd RCURLY RCURLY

    LPAREN          shift and go to state 48


state 39

    (6) classe -> CLASS ID EXTENDS ID LCURLY vars . metodos RCURLY
    (9) vars -> vars . var
    (13) metodos -> . metodo
    (14) metodos -> . metodos metodo
    (11) var -> . tipo ID SEMICOLON
    (12) var -> . ID ID SEMICOLON
    (15) metodo -> . PUBLIC tipo ID LPAREN params RPAREN LCURLY vars cmds RETURN exp SEMICOLON RCURLY
    (16) metodo -> . PUBLIC tipo ID LPAREN RPAREN LCURLY vars cmds RETURN exp SEMICOLON RCURLY
    (17) metodo -> . PUBLIC ID ID LPAREN params RPAREN LCURLY vars cmds RETURN exp SEMICOLON RCURLY
    (18) metodo -> . PUBLIC ID ID LPAREN RPAREN LCURLY vars cmds RETURN exp SEMICOLON RCURLY
    (19) metodo -> . empty
    (24) tipo -> . INT LBRACKET RBRACKET
    (25) tipo -> . BOOLEAN
    (26) tipo -> . INT
    (72) empty -> .

  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
    ID              shift and go to state 19
    PUBLIC          shift and go to state 33
    INT             shift and go to state 24
    BOOLEAN         shift and go to state 25
    RCURLY          reduce using rule 72 (empty -> .)
    RETURN          reduce using rule 72 (empty -> .)
    LCURLY          reduce using rule 72 (empty -> .)
    IF              reduce using rule 72 (empty -> .)
    WHILE           reduce using rule 72 (empty -> .)
    PRINTLN         reduce using rule 72 (empty -> .)
    ELSE            reduce using rule 72 (empty -> .)
    SEMICOLON       reduce using rule 72 (empty -> .)
    RPAREN          reduce using rule 72 (empty -> .)
    RBRACKET        reduce using rule 72 (empty -> .)
    AND             reduce using rule 72 (empty -> .)
    COMMA           reduce using rule 72 (empty -> .)

  ! PUBLIC          [ reduce using rule 72 (empty -> .) ]
  ! ID              [ reduce using rule 72 (empty -> .) ]
  ! INT             [ reduce using rule 72 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 72 (empty -> .) ]

    metodos                        shift and go to state 49
    var                            shift and go to state 31
    metodo                         shift and go to state 32
    tipo                           shift and go to state 23
    empty                          shift and go to state 34

state 40

    (12) var -> ID ID SEMICOLON .

    PUBLIC          reduce using rule 12 (var -> ID ID SEMICOLON .)
    RCURLY          reduce using rule 12 (var -> ID ID SEMICOLON .)
    ID              reduce using rule 12 (var -> ID ID SEMICOLON .)
    INT             reduce using rule 12 (var -> ID ID SEMICOLON .)
    BOOLEAN         reduce using rule 12 (var -> ID ID SEMICOLON .)
    LCURLY          reduce using rule 12 (var -> ID ID SEMICOLON .)
    IF              reduce using rule 12 (var -> ID ID SEMICOLON .)
    WHILE           reduce using rule 12 (var -> ID ID SEMICOLON .)
    PRINTLN         reduce using rule 12 (var -> ID ID SEMICOLON .)
    RETURN          reduce using rule 12 (var -> ID ID SEMICOLON .)


state 41

    (7) classe -> CLASS ID LCURLY vars metodos RCURLY .

    $end            reduce using rule 7 (classe -> CLASS ID LCURLY vars metodos RCURLY .)
    CLASS           reduce using rule 7 (classe -> CLASS ID LCURLY vars metodos RCURLY .)


state 42

    (14) metodos -> metodos metodo .

    RCURLY          reduce using rule 14 (metodos -> metodos metodo .)
    PUBLIC          reduce using rule 14 (metodos -> metodos metodo .)


state 43

    (15) metodo -> PUBLIC tipo . ID LPAREN params RPAREN LCURLY vars cmds RETURN exp SEMICOLON RCURLY
    (16) metodo -> PUBLIC tipo . ID LPAREN RPAREN LCURLY vars cmds RETURN exp SEMICOLON RCURLY

    ID              shift and go to state 50


state 44

    (17) metodo -> PUBLIC ID . ID LPAREN params RPAREN LCURLY vars cmds RETURN exp SEMICOLON RCURLY
    (18) metodo -> PUBLIC ID . ID LPAREN RPAREN LCURLY vars cmds RETURN exp SEMICOLON RCURLY

    ID              shift and go to state 51


state 45

    (11) var -> tipo ID SEMICOLON .
